sandbox/output
StringCalculator.java:9: error: cannot find symbol
        if(number.startWith("//")){
                 ^
  symbol:   method startWith(String)
  location: variable number of type String
StringCalculator.java:10: error: incompatible types: char cannot be converted to String
           delimiter = number.charAt(2);
                                    ^
2 errors
